--- a/olx-master/src/main/resources/application.yml
+++ b/olx-master/src/main/resources/application.yml
@@ -1,7 +1,24 @@
 server:
   port: 5002
-
 spring:
-    mvc:
-       pathmatch:
-               matching-strategy: ANT_PATH_MATCHER
+  datasource:
+    password: root
+    url: jdbc:mysql://localhost:3306/masterApp
+    username: root
+  jpa:
+    hibernate:
+      ddl-auto: create
+      format_sql: true
+    show-sql: true
+  mvc:
+    pathmatch:
+      matching-strategy: ant-path-matcher
+management:
+   endpoints:
+     web:
+       exposure:
+         include:
+         - "*"
+         exclude:
+         
+       base-path: /master-application
